--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,6 +1,8 @@
 .video__iframe {
   box-sizing: border-box;
   margin-right: 20px;
+  width: 515px;
+  height: 316px;
 }
 
 .video__iframe:last-child {
